[package]
name = "screenshot-scaledown"
version = "0.1.0"
authors = ["Auyer <rafael@rcpassos.me>"]

[dependencies]
libc = "0.2.71"
image = "0.23.5"
livesplit-hotkey = "0.5.0"
scopeguard = "1.1.0"

[target.x86_64-unknown-linux-gnu.dependencies.x11rb]
version = "0.5.0"
features = ["xinput"]

[target.x86_64-unknown-linux-gnu.dependencies.xlib]
git = "https://github.com/servo/rust-xlib"
[target.i686-unknown-linux-gnu.dependencies.xlib]
git = "https://github.com/servo/rust-xlib"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.8"
features = ["winuser", "synchapi", "consoleapi", "shellscalingapi"]

[target.'cfg(windows)'.dependencies.clipboard-win]
version = "3.1.0"
